Fixed and standardized vertical spacing for <p> and media elements.

--- a/omnipedia_site/stylesheets/global/_layout.content.scss
+++ b/omnipedia_site/stylesheets/global/_layout.content.scss
@@ -2,6 +2,22 @@
 //   Site layout - Content
 // -----------------------------------------------------------------------------
 
+///
+/// Generic content item vertical spacing on smaller screens.
+///
+/// Note that this is set to this specific value to approximate Wikipedia's
+/// spacing before <p> elements, so should not be changed from this value.
+///
+$content-item-vertical-spacing-small: $general-spacing * 0.8;
+
+///
+/// Generic content item vertical spacing on larger screens.
+///
+/// Note that this is set to this specific value to approximate Wikipedia's
+/// spacing before <p> elements, so should not be changed from this value.
+///
+$content-item-vertical-spacing-large: $general-spacing * 0.8;
+
 .layout-content {
   // On narrow screens the horizontal padding matches the layout gutter.
   padding: $layout-gap $layout-gutter;
